# 42_computor_v1

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md
.github/workflows/: gtest.yml
srcs/: computor.cpp  computor.hpp  main.cpp
srcs/Calculator/: Calculator.cpp  Calculator.hpp
srcs/Parser/: Parser.cpp  Parser.hpp
srcs/Result/: Result.hpp  Result.tpp
srcs/Tokenizer/: Tokenizer.cpp  Tokenizer.hpp
tests/utest/: TestCalcEquation.cpp  TestCalcEquation.h  TestLib.cpp  TestParser.cpp  TestParser.hpp  TestTmp.cpp  TestTokenizer.cpp  TestTokenizer.hpp
